tests/paczka1/small_fuzzy/25363998.err
Error in line 3: dlj A485 37,6
Error in line 9: SOBDNg A353 33,6
Error in line 8: dlj A149 84,9
